# cmaketutorial

./: CMakeLists.txt  CTestConfig.cmake  MultiCPackConfig.cmake  TutorialConfig.h.in  tutorial.cpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.cpp  mysqrt.h
debug/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctionsConfig.cmake  MathFunctionsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
debug/Debug/: MathFunctionsd.exp  SqrtLibraryd.lib
debug/MathFunctions/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MakeTable.vcxproj  MakeTable.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SqrtLibrary.vcxproj  SqrtLibrary.vcxproj.filters  cmake_install.cmake
debug/MathFunctions/MakeTable.dir/Debug/: MakeTable.ilk
debug/MathFunctions/MakeTable.dir/Debug/MakeTable.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  MakeTable.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug/MathFunctions/MathFunctions.dir/Debug/: MathFunctionsd.dll.recipe  MathFunctionsd.ilk
debug/MathFunctions/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug/MathFunctions/SqrtLibrary.dir/Debug/: SqrtLibraryd.lib.recipe
debug/MathFunctions/SqrtLibrary.dir/Debug/SqrtLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
debug/Tutorial.dir/Debug/: Tutoriald.exe.recipe  Tutoriald.ilk
debug/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Tutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
debug/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  MathFunctionsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  Tutorial.sln  Tutorial.vcxproj  Tutorial.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
release/Debug/: MathFunctionsd.exp  MathFunctionsd.lib  SqrtLibraryd.lib
release/MathFunctions/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MakeTable.vcxproj  MakeTable.vcxproj.filters  MathFunctions.vcxproj  MathFunctions.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SqrtLibrary.vcxproj  SqrtLibrary.vcxproj.filters  cmake_install.cmake
release/MathFunctions/MakeTable.dir/Debug/: MakeTable.exe.recipe  MakeTable.ilk
release/MathFunctions/MakeTable.dir/Debug/MakeTable.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
release/MathFunctions/MathFunctions.dir/Debug/: MathFunctionsd.dll.recipe  MathFunctionsd.ilk
release/MathFunctions/MathFunctions.dir/Debug/MathFunctions.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  MathFunctions.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
release/MathFunctions/SqrtLibrary.dir/Debug/SqrtLibrary.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
release/Tutorial.dir/Debug/: Tutoriald.exe.recipe  Tutoriald.ilk
release/Tutorial.dir/Debug/Tutorial.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tutorial.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
release/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
release/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
release/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
release/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
